<resources>
    <string name="app_name" translatable="false">Th Learn</string>
    <string name="developer" translatable="false">Th Code</string>

    <string name="title_activity_splash">SplashScreen</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_web">WebView</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_long">Sign in or register</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in">Sing in</string>
    <string name="action_log">Log in or register</string>

    <string name="action_have_account">have Account?</string>
    <string name="action_not_have_account">haven\'t Account?</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="login_failed">"Login failed"</string>

    <string name="submit">submit</string>

    <string name="more">more</string>
    <string name="learns">Learns</string>

    <string name="image_view_description">icon image</string>
</resources>